--- a/index.html
+++ b/index.html
@@ -397,7 +397,34 @@ var render_gexf = (gexf) => {
       }
 
       return res;
-    },
+    }
+    nodeReducer: (node, data) => {
+  var res = { ...data };  // Copy current data
+
+  if (state.hoveredPath) {
+    if (data.path[0] === state.hoveredPath) {
+      res.hidden = true;  // Hide nodes that match the hovered label
+    } else {
+      res.hidden = false; // Keep all other nodes visible
+    }
+  } else if (state.hoveredNode) {
+    // Existing hover functionality, which remains unchanged for nodes
+    if (state.hoveredNode === node) {
+      res.highlighted = true;
+    }
+    if (state.hoveredDescendants.has(node)) {
+      res.zIndex = 2;
+    } else if (state.hoveredAncestors.has(node)) {
+      res.color = res.dim_color;
+    } else {
+      res.label = undefined;
+      res.color = res.very_dim_color;
+    }
+  }
+
+  return res;  // Return modified data for rendering
+}
+
   });
 
   let statusElem = document.getElementById('statusWrapper');
@@ -417,29 +444,16 @@ li.addEventListener('mouseenter', (event) => {
   setHoveredNode(undefined);  // Reset hovered node
   state.hoveredPath = top_level;  // Set the path to the hovered one
 
-  // Loop through the nodes and hide those matching the hovered path
-  for (let [n, node_data] of graph.nodeEntries()) {
-    if (node_data.path[0] === top_level) {
-      graph.setNodeAttribute(n, 'hidden', true);  // Hide the node
-    } else {
-      graph.setNodeAttribute(n, 'hidden', false);  // Keep other nodes visible
-    }
-  }
-  
   renderer.refresh();  // Refresh the graph to reflect changes
 });
 
 li.addEventListener('mouseleave', (event) => {
   state.hoveredPath = undefined;  // Clear the hovered path
   setHoveredNode(default_hover ? state.defaultNode : undefined);  // Restore the default state
-  
-  // Unhide all nodes when hover ends
-  for (let [n, node_data] of graph.nodeEntries()) {
-    graph.setNodeAttribute(n, 'hidden', false);  // Make sure all nodes are visible again
-  }
 
   renderer.refresh();  // Refresh the graph to revert changes
 });
+
 
 
   }
