--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ var render_gexf = (gexf) => {
 
       if (state.hoveredNode) {
         if (state.hoveredNode === node) {
-          res.hidden = true;
+          graph.dropNode(node);
         }
         if (state.hoveredDescendants.has(node)) {
           res.zIndex = 2;
