--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@ var render_gexf = (gexf) => {
 
       if (state.hoveredNode) {
         if (state.hoveredNode === node) {
+          graph.dropNode(node);
         }
+        
         if (state.hoveredDescendants.has(node)) {
         }
         else if (state.hoveredAncestors.has(node)) {
