--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Minimal Graph Skeleton</title>
+  <title>Minimal Graph</title>
   <script src="vendor/sigma.min.js"></script>
   <script src="vendor/graphology.min.js"></script>
   <script src="vendor/graphology-library.min.js"></script>
   <style>
-    html, body { margin:0; padding:0; width:100%; height:100%; }
-    #sigma-container { width:100%; height:100%; }
+    html, body { margin: 0; padding: 0; width: 100%; height: 100%; }
+    #graph-container { width: 100%; height: 100%; }
   </style>
 </head>
 <body>
-  <div id="sigma-container"></div>
+  <div id="graph-container"></div>
   <script>
     fetch("import.gexf")
-      .then(response => response.text())
+      .then(r => r.text())
       .then(gexf => {
         const graph = graphologyLibrary.gexf.parse(graphology.Graph, gexf);
-        new Sigma.Sigma(graph, document.getElementById("sigma-container"));
+        new Sigma.Sigma(graph, document.getElementById("graph-container"), {
+          // Disables user camera control so it stays still:
+          allowCameraInteraction: false
+        });
       });
   </script>
 </body>
 </html>
+
