--- a/index.html
+++ b/index.html
@@ -2,23 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Minimal Graph Skeleton</title>
-  <script src="vendor/sigma.min.js"></script>
-  <script src="vendor/graphology.min.js"></script>
-  <script src="vendor/graphology-library.min.js"></script>
+  <title>Graph Visualization</title>
+
+  <script src="https://unpkg.com/graphology@0.21.1/dist/graphology.umd.min.js"></script>
+  <script src="https://unpkg.com/graphology-gexf/browser.js"></script>
+  <script src="https://unpkg.com/sigma@2.3.0/build/sigma.min.js"></script>
+  
   <style>
-    html, body { margin:0; padding:0; width:100%; height:100%; }
-    #sigma-container { width:100%; height:100%; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    #sigma-container {
+      width: 100%;
+      height: 100%;
+    }
   </style>
 </head>
 <body>
+  <!-- Container for the Sigma.js graph -->
   <div id="sigma-container"></div>
+
   <script>
-    fetch("import.gexf")
+    const gexfUrl = 'import.gexf';
+
+    fetch(gexfUrl)
       .then(response => response.text())
-      .then(gexf => {
-        const graph = graphologyLibrary.gexf.parse(graphology.Graph, gexf);
-        new Sigma.Sigma(graph, document.getElementById("sigma-container"));
+      .then(gexfData => {
+        const graph = graphologyGexf.parse(gexfData, {multi: false});
+
+        const renderer = new sigma.Sigma(graph, document.getElementById('sigma-container'));
+      })
+      .catch(error => {
+        console.error('Error loading the GEXF file:', error);
       });
   </script>
 </body>
