--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Graph Visualization</title>
-
-  <script src="https://unpkg.com/graphology@0.21.1/dist/graphology.umd.min.js"></script>
-  <script src="https://unpkg.com/graphology-gexf/browser.js"></script>
-  <script src="https://unpkg.com/sigma@2.3.0/build/sigma.min.js"></script>
-  
+  <title>Minimal Graph</title>
+  <script src="vendor/sigma.min.js"></script>
+  <script src="vendor/graphology.min.js"></script>
+  <script src="vendor/graphology-library.min.js"></script>
   <style>
     html, body {
-      height: 100%;
       margin: 0;
       padding: 0;
+      width: 100%;
+      height: 100%;
     }
     #sigma-container {
       width: 100%;
@@ -21,21 +20,14 @@
   </style>
 </head>
 <body>
-  <!-- Container for the Sigma.js graph -->
   <div id="sigma-container"></div>
-
   <script>
-    const gexfUrl = 'import.gexf';
-
-    fetch(gexfUrl)
+    // Load and parse the GEXF, then render it with Sigma
+    fetch("import.gexf")
       .then(response => response.text())
-      .then(gexfData => {
-        const graph = graphologyGexf.parse(gexfData, {multi: false});
-
-        const renderer = new sigma.Sigma(graph, document.getElementById('sigma-container'));
-      })
-      .catch(error => {
-        console.error('Error loading the GEXF file:', error);
+      .then(gexf => {
+        const graph = graphologyLibrary.gexf.parse(graphology.Graph, gexf);
+        new Sigma.Sigma(graph, document.getElementById("sigma-container"));
       });
   </script>
 </body>
